[REFACTOR] Constant for the TEMPLATE_DIR and enhance the code